<resources>
    <string name="app_name">bWare</string>
    <string name="access_token">sk.eyJ1IjoiYWFzaGlrMDgwOCIsImEiOiJja2QwZXVkbDAwdDF0MnpuNzBxazlwOG1wIn0.kZFDvrNVAhIY4MMvuyjC5A</string>
<<<<<<< HEAD
=======
    <string name="google_map_access_token">AIzaSyDyZ-uI4Ia-DPWJ_LQiT6JvZcQJf0OxfcM</string>
>>>>>>> 48a60c4102f13fe2ac8838f56c44906d17ae4186

    <string name="app_permission">App Permission</string>
    <string name="i_agree">I Agree</string>
    <string name="data_sharing">Data Sharing</string>
    <string name="your_data_will_be_shared_only_with_the_government_of_india_the_app_does_not_allow_your_name_and_number_to_be_disclosed_to_the_public_at_large_at_any_time">Your data will be shared only with the government of india the app does not allow your name and number to be disclosed to the public at large at any time</string>
    <string name="device_location">Device Location</string>
    <string name="it_is_recommended_that_you_set_your_location_sharing_to_always_you_can_change_this_any_time_later">It is recommended that you set your location sharing to always you can change this any time later</string>
    <string name="terms_of_service_amp_privacy"><![CDATA[Terms of Service & Privacy]]></string>
    <string name="we_understand_the_nature_and_sensitivity_of_this_topic_and_have_taken_strong_measures_to_ensure_that_your_data_is_not_compromised">We understand the nature and sensitivity of this topic and have taken strong measures to ensure that your data is not compromised.</string>
    <string name="if_you_would_like_to_contribute_to_a_safer_india_please_indicate_your_acceptance_of_the_terms_of_service_and_the_privacy_policy_by_clicking_on_the_button_below">If you would like to contribute to a safer india please indicate your acceptance of the terms of service and the privacy policy by clicking on the button below</string>
    <string name="welcome">Welcome</string>
    <string name="what_is_your_phone_number">What is your phone number?</string>
    <string name="why_do_we_ask">Why do we ask?</string>
    <string name="send_otp">Send OTP</string>
    <string name="_91_8568465846">(+91) 8568465846</string>
    <string name="your_mobile_number_is_required_of_contact_tracing">Your mobile number is required of contact tracing.</string>
    <string name="enter_the_4_digit_code_send_to_your_sms">Enter the 4-digit code send to your SMS</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="verify">Verify</string>
    <string name="add_address">Add Address</string>
    <string name="place">Your Native Place</string>
    <string name="pin_code">Pin Code</string>
    <string name="enter_your_address_details">Enter your Address details.</string>
    <string name="title_activity_dash_board">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="in_your_area_now_within_radius_of">In your area now, within radius of</string>
    <string name="from">From Date :</string>
    <string name="to">To Date :</string>
    <string name="view_report">View Report</string>
    <string name="distance">Distance :</string>
    <string name="previously_in_your_area_within_radius_of">Previously in your area, within radius of</string>
    <string name="prevention">Prevention</string>
    <string name="clean_disinfect">Clean Disinfect</string>
    <string name="use_masks">Use Masks</string>
    <string name="wash_hands">Wash Hands</string>
    <string name="retry">Retry</string>
    <string name="you_re_offline">You\'re offline</string>
    <string name="turn_on_your_mobile_data_or_wi_fi_to_continue">Turn on your Mobile data or Wi-Fi to continue</string>
    <string name="default_notification_channel_id">BwareAlert</string>
    <string name="title_activity_maps">Map</string>
    <string name="red_zones_at_your_current_location">Red zones at your current location</string>
    <string name="settings">Settings</string>
    <string name="start_date">Start Date :</string>
    <string name="end_date">End Date :</string>
<<<<<<< HEAD
=======
    <string name="version_1_0_0">Version : 1.0.0</string>
    <string name="bware">bWare</string>
    <string name="close">Close</string>
    <string name="u00a9_2020_fiends">© 2020 Fiends</string>
>>>>>>> 48a60c4102f13fe2ac8838f56c44906d17ae4186

    <string name="SendOTP">https://sih-drs-prototype-backend-2.herokuapp.com/api/appUsers/register/sendOTP</string>
    <string name="VerifyOTP">https://sih-drs-prototype-backend-2.herokuapp.com/api/appUsers/register/confirmOTP</string>
    <string name="SendAddress">https://sih-drs-prototype-backend-2.herokuapp.com/api/appUsers/register/details</string>
    <string name="GetStates">https://sih-drs-prototype-backend-2.herokuapp.com/api/getLocationDetails/states</string>
    <string name="GetDistricts">https://sih-drs-prototype-backend-2.herokuapp.com/api/getLocationDetails/</string>
    <string name="GetNearByOutrages">https://sih-drs-prototype-backend-2.herokuapp.com/api/appUsers/nearByOutrages</string>
    <string name="GetAllDiseases">https://sih-drs-prototype-backend-2.herokuapp.com/api/outrages/diseases/all</string>
    <string name="GetPlaceLevelDiseasesCount">https://sih-drs-prototype-backend-2.herokuapp.com/api/outrages/getDetails/individualCount</string>
    <string name="GetRedZone">https://sih-drs-prototype-backend-2.herokuapp.com/api/appUsers/redZones</string>
<<<<<<< HEAD
    <string name="ReportLink">https://drsproject-f58fa.web.app/report</string>
    <string name="version_1_0_0">Version : 1.0.0</string>
=======
    <string name="ReportLink">https://project-f58fa.web.app/report</string>
>>>>>>> 48a60c4102f13fe2ac8838f56c44906d17ae4186

</resources>