<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_38sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_image" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_38sdp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_38sdp"
        android:gravity="center"
        android:text="@string/what_is_your_phone_number"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_57sdp"
        android:ems="10"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/colorPurple"
        android:paddingStart="@dimen/_14sdp"
        android:paddingEnd="@dimen/_14sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/_91_8568465846"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/purpose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/why_do_we_ask"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="@+id/phone_number"
        app:layout_constraintStart_toStartOf="@+id/phone_number"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <Button
        android:id="@+id/send_otp_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_29sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_72sdp"
        android:background="@drawable/button_background"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="arial"
        android:text="@string/send_otp"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:elevation="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/phone_number"
        app:layout_constraintStart_toStartOf="@+id/phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>