<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevention"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_11sdp"
            android:layout_marginEnd="@dimen/_11sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="@dimen/_57sdp"
                android:layout_height="@dimen/_57sdp"
                app:srcCompat="@drawable/wash_hands" />

            <TextView
                android:id="@+id/textView10"
                android:gravity="center"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wash_hands"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPurple" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="@dimen/_11sdp"
            android:layout_marginEnd="@dimen/_11sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_57sdp"
                android:layout_height="@dimen/_57sdp"
                app:srcCompat="@drawable/clean_disinfect" />

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:text="@string/clean_disinfect"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPurple" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="@dimen/_11sdp"
            android:layout_marginEnd="@dimen/_11sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_57sdp"
                android:layout_height="@dimen/_57sdp"
                app:srcCompat="@drawable/use_masks" />

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:text="@string/use_masks"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPurple" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>