<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SplashActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/splash_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="splash.json"
        app:lottie_imageAssetsFolder="images" />

    <LinearLayout
        android:id="@+id/network_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/splash_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/you_re_offline"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="@dimen/_6sdp"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_29sdp"
            android:text="@string/turn_on_your_mobile_data_or_wi_fi_to_continue"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_11sdp" />

        <Button
            android:id="@+id/retry_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_29sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_47sdp"
            android:layout_marginEnd="@dimen/_47sdp"
            android:background="@drawable/button_background"
            android:elevation="@dimen/_4sdp"
            android:focusable="true"
            android:clickable="true"
            android:fontFamily="arial"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:elevation="@dimen/_4sdp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>