<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_72sdp"
        android:layout_marginTop="@dimen/_23sdp"
        android:layout_marginEnd="@dimen/_72sdp"
        android:layout_marginBottom="@dimen/_23sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/otp_svg" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_214sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:gravity="center"
        android:text="@string/enter_the_4_digit_code_send_to_your_sms"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_23sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <EditText
            android:id="@+id/otp1"
            android:layout_width="@dimen/_39sdp"
            android:layout_height="@dimen/_54sdp"
            android:background="@drawable/otp_edit_text"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="1"
            android:textColor="@color/colorPurple"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp2"
            android:layout_width="@dimen/_39sdp"
            android:layout_height="@dimen/_54sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:background="@drawable/otp_edit_text"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="1"
            android:textColor="@color/colorPurple"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp3"
            android:layout_width="@dimen/_39sdp"
            android:layout_height="@dimen/_54sdp"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/otp_edit_text"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="1"
            android:textColor="@color/colorPurple"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="@dimen/_39sdp"
            android:layout_height="@dimen/_54sdp"
            android:background="@drawable/otp_edit_text"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="1"
            android:textColor="@color/colorPurple"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_23sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:text="@string/didn_t_receive_the_code"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/otp_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="14:60"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/verify_otp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_29sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_72sdp"
        android:background="@drawable/button_background"
        android:elevation="@dimen/_4sdp"
        android:enabled="false"
        android:fontFamily="arial"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:elevation="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>